--- a/mongo-tool/pom.xml
+++ b/mongo-tool/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.rrtv</groupId>
     <artifactId>mongo-tool</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>mongo-tool</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.rrtv</groupId>
             <artifactId>sqltomongo-spring-boot-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
