--- a/mongo-tool/pom.xml
+++ b/mongo-tool/pom.xml
@@ -51,9 +51,9 @@
             <version>2.12.0</version>
         </dependency>
         <dependency>
-            <groupId>com.rrtv</groupId>
+            <groupId>cn.org.wangchangjiu</groupId>
             <artifactId>sqltomongo-spring-boot-starter</artifactId>
-            <version>2.0.0</version>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
