--- a/mongo-tool/pom.xml
+++ b/mongo-tool/pom.xml
@@ -8,24 +8,16 @@
         <version>2.7.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.rrtv</groupId>
+    <groupId>cn.org.wangchangjiu</groupId>
     <artifactId>mongo-tool</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>mongo-tool</name>
-    <description>Demo project for Spring Boot</description>
+    <description>mongo 查询工具 web 版本</description>
     <properties>
         <java.version>1.8</java.version>
         <alibaba.fastjson.version>1.2.58</alibaba.fastjson.version>
     </properties>
     <dependencies>
-       <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
-        </dependency>-->
-       <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -35,11 +27,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--<dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -53,7 +40,7 @@
         <dependency>
             <groupId>cn.org.wangchangjiu</groupId>
             <artifactId>sqltomongo-spring-boot-starter</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.1-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
